# clt-rs

./: .codex  Cargo.toml  LICENSE.txt  README.md  design.md  skills.md  test_flow.sh
src/: main.rs
tasks/: doing.md  done.md  todo.md
