[package]
name = "clt-rs"
version = "0.1.2"
edition = "2024"
description = "Command Line Tasks, a file-backed CLI task manager with TUI kanban board"
license = "MIT"
repository = "https://github.com/AlpineVibrations/clt-rs"
readme = "README.md"
keywords = ["cli", "tasks", "kanban", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "clt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1.0"